# get-national-rail-departures

./: Cargo.toml  index.html
src/: main.rs  models.rs  requests.rs
tests/data/: error.json  example.xml  foh.json  foh.xml  long.json  output.json  soap_error.xml
