[package]
name = "get-national-rail-departures"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
reqwest = { version = "0.11.17", features = ["json"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = "*"
serde_json = "*"
serde-xml-rs = "*"
dotenv = "0.15.0"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
test-case = "*"